# osc_recorder

./: .gitignore  AcquisitionBackend.cpp  AcquisitionBackend.h  AcquisitionSettingsPage.qml  AppButton.qml  AsyncLogWriter.cpp  AsyncLogWriter.h  CMakeLists.txt  ChannelSettingsPage.qml  ChannelStore.qml  Main.qml  NavigationPanel.qml  ParameterPanel.qml  PlaybackBackend.cpp  PlaybackBackend.h  PlaybackPage.qml  README.md  RealtimeDataBackend.cpp  RealtimeDataBackend.h  RecorderBackend.cpp  RecorderBackend.h  RecordingPage.qml  SoftwarePlaning.md  SystemInfoBackend.cpp  SystemInfoBackend.h  SystemStatusPage.qml  WaveformPanel.qml  codex_prompts.md  main.cpp
